fix: make fixed sidebar content scrollable on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,12 @@ img {
 #root {
   min-height: 100vh;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
